--- a/style.css
+++ b/style.css
@@ -116,6 +116,16 @@ code {
     text-align: right !important;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
 ul {
     line-height: 2;
 }
@@ -214,7 +224,7 @@ header {
 #container-color-theme {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.75rem;
     color: black;
     padding: 0 2rem;
 }
@@ -222,12 +232,13 @@ header {
 .btn-color-theme {
     aspect-ratio: 1;
     width: 2rem;
-    border: 2px solid white;
+    border: 0.25rem solid white;
     border-radius: 0.5rem;
+    cursor: pointer;
 }
 
 .btn-color-theme-selected {
-    border: 2px solid var(--main-color, grey);
+    border: 0.25rem solid hsl(var(--hue), 90%, 90%);
 }
 
 #btn-orange-theme {
@@ -427,7 +438,7 @@ header {
     border: none;
     border-radius: 0.25rem;
     cursor: pointer;
-    background-color: var(--accent-color);
+    background-color: var(--constrast-color);
     color: white;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11),
         0 1px 3px rgba(0, 0, 0, .08);
