--- a/style.css
+++ b/style.css
@@ -509,7 +509,7 @@ header {
 .section-description {
     margin-bottom: 0.5rem;
     background-color: var(--description-background-color, white);
-    padding: 1rem;
+    padding: 1rem 1rem 0.5rem 1rem;
     border-radius: 0.25rem;
     border-left: 6px solid var(--main-color, black);
 }
@@ -658,6 +658,42 @@ header {
     border-radius: 4px;
     color: hsl(150, 70%, 20%);
     background-color: var(--illustration-green, lightgreen);
+}
+
+/* SECTION VARIABLES */
+
+.variables-hsl-block {
+    margin-bottom: 1.5rem;
+}
+
+.variables-hsl-examples {
+    display: flex;
+    flex-direction: column;
+}
+
+.variables-hsl-examples div:first-child {
+    margin-bottom: 0.125rem;
+}
+
+.variables-hsl-examples div:nth-child(2) {
+    flex-grow: 1;
+}
+
+.variables-hsl-example {
+    padding: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.variables-hsl-examples:first-child div:nth-child(2) {
+    background-color: var(--main-color);
+}
+
+.variables-hsl-examples:nth-child(2) div:nth-child(2) {
+    background-color: var(--constrast-color);
+}
+
+.variables-hsl-examples:nth-child(3) div:nth-child(2) {
+    background-color: var(--title-color);
 }
 
 /* SECTION LAYOUT */
