--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@
 :root[theme="light"] {
     --main-color: hsl(var(--hue), 100%, 50%);
     --constrast-color: hsl(var(--hue), 60%, 40%);
-    --accent-color: hsl(var(--hue), 100%, 45%);
+    --dark-color: hsl(var(--hue), 80%, 20%);
     --decorative-color: hsl(var(--hue), 100%, 50%);
-    --background-color: hsl(var(--hue), 35%, 82%);
-    --background-color-odd: hsl(var(--hue), 40%, 85%);
+    --background-color: hsl(var(--hue), 31%, 86%);
+    --background-color-odd: hsl(var(--hue), 36%, 91%);
     --title-color: hsl(var(--hue), 90%, 10%);
     --text-color: hsl(var(--hue), 90%, 10%);
     --description-text-color: hsl(var(--hue), 90%, 20%);
@@ -47,7 +47,7 @@
 :root[theme="dark"] {
     --main-color: hsl(var(--hue), 100%, 50%);
     --constrast-color: hsl(var(--hue), 60%, 40%);
-    --accent-color: hsl(var(--hue), 100%, 45%);
+    --dark-color: hsl(var(--hue), 86%, 12%);
     --decorative-color: hsl(var(--hue), 100%, 45%);
     --background-color: hsl(var(--hue), 20%, 20%);
     --background-color-odd: hsl(var(--hue), 20%, 16%);
@@ -475,25 +475,26 @@ header {
 }
 
 .section-subtitle {
+    --margin: 2.5rem 0 1rem 0;
     position: relative;
     z-index: 1;
     font-size: 1.5rem;
-    margin: 2.5rem 0 1rem 0;
+    margin: var(--margin, 2.5rem 0 1rem 0);
     padding-left: 1.5em;
 }
 
 .section-subtitle::before {
-    background: var(--decorative-color, #ffc862);
-    bottom: 0.4em;
-    content: "";
-    height: 0.3em;
-    width: 1em;
-    border-radius: 0.3em;
     position: absolute;
     right: auto;
     left: 0;
     top: auto;
+    bottom: 0.4em;
     z-index: -1;
+    background: var(--decorative-color, #ffc862);
+    content: "";
+    height: 0.3em;
+    width: 1em;
+    border-radius: 0.3em;
 }
 
 .section-subtitle-summary {
@@ -502,8 +503,30 @@ header {
 }
 
 .section-subtitle-example {
+    position: relative;
+    z-index: 1;
     font-size: 1.25rem;
+    padding-left: 1em;
     margin: 1.5rem 0;
+}
+
+.section-subtitle-example-mt {
+    margin: 3rem 0 1.5rem 0;
+}
+
+.section-subtitle-example::before {
+    position: absolute;
+    right: auto;
+    left: 0;
+    top: auto;
+    bottom: 0.4em;
+    z-index: -1;
+    background: var(--decorative-color);
+    content: "";
+    color: var(--decorative-color);
+    height: 0.3em;
+    width: 0.3em;
+    border-radius: 0.3em;
 }
 
 .section-description {
@@ -662,6 +685,10 @@ header {
 
 /* SECTION VARIABLES */
 
+#btn-example-theme {
+    margin: 1rem auto 2rem auto;
+}
+
 .variables-hsl-block {
     margin-bottom: 1.5rem;
 }
@@ -680,8 +707,9 @@ header {
 }
 
 .variables-hsl-example {
-    padding: 1rem;
-    margin-bottom: 0.5rem;
+    height: 2rem;
+    margin-bottom: 0.75rem;
+    border-radius: 0.25rem;
 }
 
 .variables-hsl-examples:first-child div:nth-child(2) {
@@ -693,7 +721,7 @@ header {
 }
 
 .variables-hsl-examples:nth-child(3) div:nth-child(2) {
-    background-color: var(--title-color);
+    background-color: var(--dark-color);
 }
 
 /* SECTION LAYOUT */
@@ -907,6 +935,39 @@ header {
         grid-column: footer-start / span 2;
         grid-row-start: footer-start;
     }
+}
+
+/* SHAPE OUTSIDE */
+
+.example-shape-outside-element {
+    width: 8rem;
+    aspect-ratio: 1;
+    background-color: var(--illustration-pink, --pre-pink);
+    float: left;
+    margin-right: 2rem;
+}
+
+.example-shape-outside-element:first-child {
+    border-radius: 50%;
+    shape-outside: circle(50%);
+}
+
+.example-shape-outside-element:nth-of-type(2) {
+    shape-outside: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+    /* the property only change the relationship of adjacent elements, 
+    not the geometry of the element itself */
+    /* to change the geometry of the element we use the clip-path property,
+    with the same values */
+    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
+}
+
+.example-shape-outside-element:nth-of-type(3) {
+    shape-outside: ellipse(35% 50% at 50% 50%);
+    clip-path: ellipse(35% 50% at 50% 50%);
+}
+
+.example-shape-outside-content {
+    margin-bottom: 3rem;
 }
 
 /* PRE */
