--- a/style.css
+++ b/style.css
@@ -463,6 +463,7 @@ header {
 .section-container {
     display: grid;
     place-content: center;
+    grid-template-columns: minmax(0, 1fr);
     max-width: var(--max-width-container, 70ch);
 }
 
@@ -744,6 +745,72 @@ header {
 
 .variables-hsl-examples:nth-child(3) div:nth-child(2) {
     background-color: var(--dark-color);
+}
+
+/* SECTION NAVIGATION */
+
+.container-scroll-y {
+    scroll-snap-type: y proximity;
+    /* y = horizontal scroll */
+    /* mandatory = one scroll and the visual viewport will rest on the next snap point */
+    /* proximity = if the user is in a range of proximity (a few hundred pixels of a snap point), the visual viewport will rest on the next snap point */
+    overflow: auto;
+    border: 0.25rem white solid;
+    border-radius: 0.25rem;
+    height: 20rem;
+}
+
+.scroll-area {
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: start;
+    /* (!) center stop at first attempt */
+    color: white;
+}
+
+.container-scroll-x .scroll-area {
+    width: 50ch;
+    scroll-snap-align: center;
+    flex: 0 0 35ch;
+}
+
+.scroll-area:nth-of-type(1) {
+    background: var(--illustration-green, lightgreen);
+    color: hsl(150, 70%, 20%);
+}
+
+.scroll-area:nth-of-type(2) {
+    background: var(--illustration-pink, pink);
+    color: hsl(326, 70%, 20%);
+}
+
+.scroll-area:nth-of-type(3) {
+    background: var(--illustration-purple, purple);
+}
+
+.scroll-area:nth-of-type(4) {
+    background: var(--illustration-green, lightgreen);
+    color: hsl(150, 70%, 20%);
+}
+
+.scroll-area:nth-of-type(5) {
+    background: var(--illustration-pink, pink);
+    color: hsl(326, 70%, 20%);
+}
+
+.container-scroll-x {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    height: 12rem;
+    max-width: 100%;
+    scroll-snap-type: x mandatory;
+    overflow-x: auto;
+    background-color: white;
+    padding: 0 0.75rem 0 0.75rem;
+    border-radius: 0.25rem;
 }
 
 /* SECTION LAYOUT */
