--- a/css/section.css
+++ b/css/section.css
@@ -144,3 +144,9 @@
     border-radius: 0.3em;
     transform: rotate(90deg) translateX(-12.5%);
 }
+
+@media (max-width: 500px) {
+    .section button {
+        width: 100%;
+    }
+}
