--- a/css/layout.css
+++ b/css/layout.css
@@ -327,3 +327,9 @@
     background-color: var(--illustration-green, --pre-green);
     clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
 }
+
+@media (max-width: 600px) {
+    #grid-container-one {
+        grid-template-rows: auto auto minmax(auto, 50%);
+    }
+}
