--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,7 @@ code {
 }
 
 .info-message .fa-lightbulb {
+    flex: 0 0 1rem;
     width: 1rem;
     margin: 0 1rem;
 }
@@ -288,6 +289,12 @@ pre .string-value {
     color: var(--pre-attribute-value-color, #f1fa8c);
 }
 
+@media (max-width: 576px) {
+    html {
+        font-size: 0.875rem;
+    }
+}
+
 @media (max-width: 768px) {
     :root {
         --max-width-container: 100%;
@@ -296,6 +303,10 @@ pre .string-value {
     .info-message {
         flex-direction: column;
         justify-content: center;
+    }
+
+    .info-message .fa-lightbulb {
+        flex: initial;
     }
 
     .info-message p {
