--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,24 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 /* HOME SECTION */
 
 header {
     min-height: var(--header-height);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 2rem;
     z-index: 2;
@@ -12,8 +26,13 @@ header {
 }
 
 #container-color-theme {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 2rem;
 }
@@ -23,7 +42,11 @@ header {
 }
 
 #container-color-buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 0.75rem;
     color: black;
@@ -51,8 +74,14 @@ header {
 }
 
 #btn-user-theme {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     aspect-ratio: 1;
     width: 2.25rem;
@@ -65,22 +94,24 @@ header {
     width: 1em;
 }
 
-#container-user-theme {
-    /* padding-bottom: 2rem; */
-}
-
 #slider-color-theme {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 0.75rem;
 }
 
 #slider-shade {
     -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     width: 100%;
     height: 2rem;
     background: -webkit-gradient(linear, left top, right top, from(red), color-stop(17%, #ff0), color-stop(33%, lime), color-stop(50%, cyan), color-stop(66%, blue), color-stop(83%, #f0f), to(red));
+    background: -o-linear-gradient(left, red 0%, #ff0 17%, lime 33%, cyan 50%, blue 66%, #f0f 83%, red 100%);
     background: linear-gradient(to right, red 0%, #ff0 17%, lime 33%, cyan 50%, blue 66%, #f0f 83%, red 100%);
     border-radius: 0.5rem;
 }
@@ -117,8 +148,14 @@ header {
 #container-light-theme {
     height: 100%;
     font-size: 26px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 0.5ch;
     padding-right: 1rem;
@@ -134,6 +171,8 @@ header {
     line-height: 34px;
     /* center icon */
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     /* align label and toggle */
     gap: 0.5ch;
@@ -147,6 +186,7 @@ header {
     border-radius: 34px;
     background-color: var(--background-color-toggle);
     -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
 }
 
@@ -160,6 +200,7 @@ header {
     border-radius: 50%;
     background-color: white;
     -webkit-transition: 0.4s;
+    -o-transition: 0.4s;
     transition: 0.4s;
 }
 
@@ -181,6 +222,7 @@ header {
     scroll-margin-top: var(--header-height);
     height: calc(100vh - var(--header-height));
     background-color: var(--background-color);
+    display: -ms-grid;
     display: grid;
     place-content: center;
     text-align: center;
@@ -190,25 +232,41 @@ header {
 #scroll-button {
     display: block;
     position: absolute;
-    bottom: 0;
+    bottom: 2rem;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    padding: 3rem;
-    font-size: 1.4rem;
+    font-size: 1.125rem;
 }
 
 .bouncing-hand {
     margin-left: 0.5rem;
     display: inline-block;
+    -webkit-animation: bounce 1s ease infinite alternate;
     animation: bounce 1s ease infinite alternate;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
     from {
+        -webkit-transform: translateY(0px);
         transform: translateY(0px);
     }
 
     to {
+        -webkit-transform: translateY(-1rem);
+        transform: translateY(-1rem);
+    }
+}
+
+@keyframes bounce {
+    from {
+        -webkit-transform: translateY(0px);
+        transform: translateY(0px);
+    }
+
+    to {
+        -webkit-transform: translateY(-1rem);
         transform: translateY(-1rem);
     }
 }
@@ -216,6 +274,7 @@ header {
 /* Respecting motion preferences */
 @media (prefers-reduced-motion: reduce) {
     .bouncing-hand {
+        -webkit-animation: none;
         animation: none;
     }
 }
