--- a/css/variables.css
+++ b/css/variables.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 /* SECTION VARIABLES */
 
 #btn-example-theme {
@@ -9,7 +16,12 @@
 }
 
 .variables-hsl-examples {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
@@ -18,6 +30,8 @@
 }
 
 .variables-hsl-examples div:nth-child(2) {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
