--- a/css/home.css
+++ b/css/home.css
@@ -54,6 +54,8 @@ header {
 }
 
 .btn-color-theme {
+    --color: 0;
+    background-color: hsl(var(--color), 60%, 60%);
     aspect-ratio: 1;
     width: 2rem;
     border: 0.25rem solid white;
@@ -63,14 +65,6 @@ header {
 
 .btn-color-theme-selected {
     border: 0.25rem solid hsl(var(--hue), 90%, 90%);
-}
-
-#btn-orange-theme {
-    background-color: hsl(32, 60%, 60%);
-}
-
-#btn-green-theme {
-    background-color: hsl(132, 60%, 60%);
 }
 
 #btn-user-theme {
