--- a/css/home.css
+++ b/css/home.css
@@ -38,6 +38,8 @@ header {
 }
 
 #container-color-theme label {
+    display: inline-block;
+    white-space: nowrap;
     color: var(--description-text-color, black);
 }
 
@@ -48,9 +50,20 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 0.75rem;
     color: black;
     /* padding-bottom: 2rem; */
+}
+
+#row-color-buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    gap: 0.75rem;
 }
 
 .btn-color-theme {
@@ -95,6 +108,7 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 0.75rem;
 }
 
@@ -129,14 +143,8 @@ header {
     border: 2px solid var(--description-text-color);
 }
 
-#slider-color-theme label {
-    display: block;
-    width: 100%;
-    color: var(--description-text-color, black);
-}
-
 #slider-color-theme input {
-    width: 100%;
+    width: clamp(100px, 150px, 100%);
 }
 
 #container-light-theme {
