--- a/css/home.css
+++ b/css/home.css
@@ -50,10 +50,10 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 0.75rem;
     color: black;
-    /* padding-bottom: 2rem; */
 }
 
 #row-color-buttons {
@@ -108,6 +108,7 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 0.75rem;
 }
@@ -118,8 +119,8 @@ header {
     appearance: none;
     width: 100%;
     height: 2rem;
-    background: -webkit-gradient(linear, left top, right top, from(red), color-stop(17%, #ff0), color-stop(33%, lime), color-stop(50%, cyan), color-stop(66%, blue), color-stop(83%, #f0f), to(red));
     background: -o-linear-gradient(left, red 0%, #ff0 17%, lime 33%, cyan 50%, blue 66%, #f0f 83%, red 100%);
+    background: -webkit-gradient(linear, left top, right top, from(red), color-stop(17%, #ff0), color-stop(33%, lime), color-stop(50%, cyan), color-stop(66%, blue), color-stop(83%, #f0f), to(red));
     background: linear-gradient(to right, red 0%, #ff0 17%, lime 33%, cyan 50%, blue 66%, #f0f 83%, red 100%);
     border-radius: 0.5rem;
 }
@@ -272,6 +273,8 @@ header {
         transform: translateY(-1rem);
     }
 }
+
+/* MEDIA QUERIES */
 
 /* Respecting motion preferences */
 @media (prefers-reduced-motion: reduce) {
