--- a/css/section.css
+++ b/css/section.css
@@ -174,6 +174,8 @@
     transform: rotate(90deg) translateX(-12.5%);
 }
 
+/* MEDIA QUERIES */
+
 @media (max-width: 500px) {
     .section button {
         width: 100%;
